# skypro_drf

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  lms.json  pyproject.toml  users.json
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_options.py  0003_course_owner_lesson_owner.py  0004_subscriptiontocourse.py  0005_alter_subscriptiontocourse_options_course_price.py  0006_course_created_update.py  0007_alter_course_created_update.py  0008_rename_created_update_course_updated_at.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username.py  0003_payments.py  0004_alter_payments_options.py  0005_stripepayment.py  0006_rename_owner_stripepayment_user_and_more.py  0007_stripepayment_status_payment.py  0008_alter_stripepayment_course_id.py
